Fixed image path

--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 % Preamble
 \documentclass[11pt]{beamer}
 
-\graphicspath{{./images/}}
+\graphicspath{{./images}}
 
 % Packages
 \usepackage{palatino}
