Renamed Mengen Wiederholung to Definitionen

--- a/sections/Mengen.tex
+++ b/sections/Mengen.tex
@@ -1,6 +1,6 @@
 \section{Mengen}
 \begin{frame}
-    \frametitle{Wiederholung}
+    \frametitle{Definitionen}
     \begin{itemize}
         \item Eine \textbf{Menge} ist eine Zusammenfassung wohlunterschiedener Objekte
         \item Einzelne Objekte heißen \textbf{Elemente}.
