Added sum and product slides

--- a/main.tex
+++ b/main.tex
@@ -47,5 +47,6 @@
     \include{sections/Organisatorisches}
     \include{sections/Mengen}
     \include{sections/VollstaendigeInduktion}
+    \include{sections/SummenProdukte}
 
 \end{document}
