--- a/sections/SummenProdukte.tex
+++ b/sections/SummenProdukte.tex
@@ -7,4 +7,24 @@
     \end{itemize}
 \end{frame}
 
-%TODO Uebung z.B. 1+3+5 in Summen
+\begin{frame}
+    \frametitle{Uebung}
+    Schreiben Sie die folgenden Summen und Produkte in Summen- und Produktform:
+    \begin{enumerate}
+        \item $x = 2+4+6+8+10$
+        \item $x = 1+3+5+7+9$
+        \item $x = 1 \cdot 3 \cdot 5 \cdot 7 \cdot 9$
+        \item $x = 1+3+6+9+12+15+18+21+24+27$
+    \end{enumerate}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Uebung}
+    Schreiben Sie die folgenden Summen und Produkte in Summen- und Produktform:
+    \begin{enumerate}
+        \item $x = 2+4+6+8+10 = \sum_{i=1}^{5} 2i$
+        \item $x = 1+3+5+7+9 = \sum_{i=1}^{5} 2i-1$
+        \item $x = 1 \cdot 3 \cdot 5 \cdot 7 \cdot 9 = \prod_{i=1}^{5} 2i-1$
+        \item $x = 1+3+6+9+12+15+18+21+24+27 = \sum_{i=1}^{10} 3i-1$
+    \end{enumerate}
+\end{frame}
