--- a/sections/SummenProdukte.tex
+++ b/sections/SummenProdukte.tex
@@ -19,7 +19,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Uebung}
+    \frametitle{Uebung Loesung}
     Schreiben Sie die folgenden Summen und Produkte in Summen- und Produktform:
     \begin{enumerate}
         \item $x = 2+4+6+8+10 = \sum_{i=1}^{5} 2i$
