Add repetition of abitur knowledge
Fixed issues.
Merging because of time sensitivity.
Might change some things later on.

Co-authored-by: Tobias Goetz <tobigoetz98@gmail.com>

--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,7 @@
 %-----------------------------------------------------------
 \title[Tutorium Lineare Algebra]{Tutorium Lineare Algebra}
 \subtitle{Vorlesung Mathematik 1 - Lineare Algebra - WS 2022/23}
-\author{Tobias Goetz}
+\author{Tobias Goetz, Mario Schwartz, Felix Schladt}
 \institute{DHBW Ravensburg}
 \logo{\includegraphics[width=1.5cm]{logo}}
 \date{\today}
@@ -45,6 +45,7 @@
     %   Sections
     %-----------------------------------------------------------
     \include{sections/Organisatorisches}
+	\include{sections/Wiederholung}
     \include{sections/Mengen}
     \include{sections/VollstaendigeInduktion}
     \include{sections/SummenProdukte}
