Fixed spacing issue of bullet points

--- a/sections/Organisatorisches.tex
+++ b/sections/Organisatorisches.tex
@@ -2,18 +2,18 @@
 \begin{frame}
     \frametitle{Über uns}
     \begin{itemize}
-        \item Tutoren: Tobias Götz, Mario Schwartz, Felix Schladt
-        \item Mail: dhbw@tobiasgoetz.de oder alternativ über die DHBW Mailadressen
-		\item Schwerpunkt: Mobile Informatik (TIM) / IT Security (TIS)
+        \vfill \item Tutoren: Tobias Götz, Mario Schwartz, Felix Schladt
+        \vfill \item Mail: dhbw@tobiasgoetz.de oder alternativ über die DHBW Mailadressen
+		\vfill \item Schwerpunkt: Mobile Informatik (TIM) / IT Security (TIS)
     \end{itemize}
 \end{frame}
 
 \begin{frame}
     \frametitle{Zum Tutorium}
     \begin{itemize}
-        \item Ziel: Stoff wiederholen und Fragen klären
-        \item Wann: verschieden
-        \item Wo: Siehe Rapla
-        \item Anwesenheit ist freiwillig
+        \vfill \item Ziel: Stoff wiederholen und Fragen klären
+        \vfill \item Wann: verschieden
+        \vfill \item Wo: Siehe Rapla
+        \vfill \item Anwesenheit ist freiwillig
     \end{itemize}
 \end{frame}
