--- a/sections/SummenProdukte.tex
+++ b/sections/SummenProdukte.tex
@@ -2,8 +2,8 @@
 \begin{frame}
     \frametitle{Summen, Produkte}
     \begin{itemize}
-        \item $x = 1+2+3+4+5+6+7+8+9+10 \iff x = \sum_{i=1}^{10} i$
-        \item $x = 1 \cdot 2 \cdot 3 \cdot 4 \cdot 5 \cdot 6 \cdot 7 \cdot 8 \cdot 9 \cdot 10 \iff x = \prod_{i=1}^{10} i \iff 10!$
+        \vfill \item $x = 1+2+3+4+5+6+7+8+9+10 \iff x = \sum_{i=1}^{10} i$
+        \vfill \item $x = 1 \cdot 2 \cdot 3 \cdot 4 \cdot 5 \cdot 6 \cdot 7 \cdot 8 \cdot 9 \cdot 10 \iff x = \prod_{i=1}^{10} i \iff 10!$
     \end{itemize}
 \end{frame}
 
@@ -11,10 +11,10 @@
     \frametitle{Uebung}
     Schreiben Sie die folgenden Summen und Produkte in Summen- und Produktform:
     \begin{enumerate}
-        \item $x = 2+4+6+8+10$
-        \item $x = 1+3+5+7+9$
-        \item $x = 1 \cdot 3 \cdot 5 \cdot 7 \cdot 9$
-        \item $x = 1+3+6+9+12+15+18+21+24+27$
+        \vfill \item $x = 2+4+6+8+10$
+        \vfill \item $x = 1+3+5+7+9$
+        \vfill \item $x = 1 \cdot 3 \cdot 5 \cdot 7 \cdot 9$
+        \vfill \item $x = 1+3+6+9+12+15+18+21+24+27$
     \end{enumerate}
 \end{frame}
 
@@ -22,9 +22,9 @@
     \frametitle{Uebung Loesung}
     Schreiben Sie die folgenden Summen und Produkte in Summen- und Produktform:
     \begin{enumerate}
-        \item $x = 2+4+6+8+10 = \sum_{i=1}^{5} 2i$
-        \item $x = 1+3+5+7+9 = \sum_{i=1}^{5} 2i-1$
-        \item $x = 1 \cdot 3 \cdot 5 \cdot 7 \cdot 9 = \prod_{i=1}^{5} 2i-1$
-        \item $x = 1+3+6+9+12+15+18+21+24+27 = \sum_{i=1}^{10} 3i-1$
+        \vfill \item $x = 2+4+6+8+10 = \sum_{i=1}^{5} 2i$
+        \vfill \item $x = 1+3+5+7+9 = \sum_{i=1}^{5} 2i-1$
+        \vfill \item $x = 1 \cdot 3 \cdot 5 \cdot 7 \cdot 9 = \prod_{i=1}^{5} 2i-1$
+        \vfill \item $x = 1+3+6+9+12+15+18+21+24+27 = \sum_{i=1}^{10} 3i-1$
     \end{enumerate}
 \end{frame}
