--- a/sections/VollstaendigeInduktion.tex
+++ b/sections/VollstaendigeInduktion.tex
@@ -1,16 +1,15 @@
 \section{Vollständige Induktion}
 \begin{frame}
     \frametitle{Vollständige Induktion}
-    Beispiel: Gausssche Summenformel
-
     Zu beweisende Aussage: $\sum_{i=1}^{n} i = \frac{n(n+1)}{2}$
+    \vfill
+    \begin{itemize}
+        \vfill \item Induktionsanfang(IA)($n=1$):
+                \newline $\sum_{i=1}^{1} i = \frac{1(1+1)}{2} = 1$
+        \vfill \item Induktionsvoraussetzung(IV):
+                \newline Die Aussage gelte für ein beliebiges aber festes $n \in \mathbb{N}$
+        \vfill \item Induktionsschritt(IS)($n \Rightarrow n+1$):
+                \newline $\sum_{i=1}^{n+1} i = \sum_{i=1}^{n} i + (n+1) \stackrel{IV}{=} \frac{n(n+1)}{2} + (n+1) = \frac{n(n+1)}{2} + \frac{2n+2}{2} = \frac{n(n+1)+2n+2}{2} = \frac{(n+1)(n+2)}{2} \blacksquare$
 
-    Induktionsanfang(IA): $n = 1$\newline
-    $\sum{i=1}^{1} i = 1 = \frac{1(1+1)}{2}$
-
-    Induktionsvoraussetzung(IV):\newline
-    Die Aussage gelte für ein beliebiges aber festes $n \in \mathbb{N}$
-
-    Induktionsschritt(IS): $n \Rightarrow n+1$\newline
-    $\sum_{i=1}^{n+1} i = \sum_{i=1}^{n} i + (n+1) \stackrel{IV}{=} \frac{n(n+1)}{2} + (n+1) = \frac{n(n+1)}{2} + \frac{2n+2}{2} = \frac{n(n+1)+2n+2}{2} = \frac{(n+1)(n+2)}{2} \blacksquare$
+    \end{itemize}
 \end{frame}
