Changed include to input for all sections

--- a/main.tex
+++ b/main.tex
@@ -44,10 +44,10 @@
     %-----------------------------------------------------------
     %   Sections
     %-----------------------------------------------------------
-    \include{sections/Organisatorisches}
-    \include{sections/Wiederholung}
-    \include{sections/Mengen}
-    \include{sections/SummenProdukte}
-    \include{sections/VollstaendigeInduktion}
+    \input{sections/Organisatorisches}
+    \input{sections/Wiederholung}
+    \input{sections/Mengen}
+    \input{sections/SummenProdukte}
+    \input{sections/VollstaendigeInduktion}
 
 \end{document}
