Fixed slide content issues

--- a/sections/Wiederholung.tex
+++ b/sections/Wiederholung.tex
@@ -94,8 +94,8 @@
 \begin{frame}
     \frametitle{Potenzgesetze Lösungen}
 	\begin{enumerate}
-		\vfill \item $\frac{1^3}{5^n} = \frac{1}{5}^n$
-		\vfill \item $\frac{5^0- \sin(a^2) + \cos(a^2)}{\ln(e)} = 1$
+		\vfill \item $\frac{1^3}{5^n} = (\frac{1}{5})^n$
+		\vfill \item $\frac{5^0- \sin(a^2) + \cos(a^2)}{\ln(e)} = 0$
 		\vfill \item $x^{-n} * x = x^{-n+1}$
 		\vfill \item $\frac{1+2x^2}{x^{m+2}}$
 	\end{enumerate}
