Added more vektorraum slides

--- a/Tutorium03/sections/Vektorraeume.tex
+++ b/Tutorium03/sections/Vektorraeume.tex
@@ -65,24 +65,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Allgemeine Rechenregeln}
-    Vektoraddition
-    \begin{itemize}
-        \item Kommutativgesetz: $v + w = w + v$
-        \item Assoziativgesetz: $(v + w) + u = v + (w + u)$
-        \item Existenz des neutrales Elements: $v + 0 = v$
-        \item Existenz des inversen Elements: $v + (-v) = 0$
-    \end{itemize}
-
-    Skalarmultiplikation
-    \begin{itemize}
-        \item Distributivgesetz 1: $c \cdot (v + w) = c \cdot v + c \cdot w$
-        \item Distributivgesetz 2: $(c + d) \cdot v = c \cdot v + d \cdot v$
-    \end{itemize}
-\end{frame}
-
-\begin{frame}
-    \frametitle{Exkurs: Ursprung der Vektorraumaxiome}
+    \frametitle{Exkurs: Mathematische Definition Vektorräume}
     \begin{itemize}
         \item Gruppe
         \begin{itemize}
@@ -129,5 +112,27 @@
                 \item $\lambda \cdot 1 = \lambda$
             \end{itemize}
         \end{itemize}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Vektorräume}
+    Ein Vektorraum ist eine Menge von Vektoren, die miteinander addiert oder mit Skalaren multipliziert werden können.
+\end{frame}
+
+\begin{frame}
+    \frametitle{Allgemeine Rechenregeln}
+    Vektoraddition
+    \begin{itemize}
+        \item Kommutativgesetz: $v + w = w + v$
+        \item Assoziativgesetz: $(v + w) + u = v + (w + u)$
+        \item Existenz des neutrales Elements: $v + 0 = v$
+        \item Existenz des inversen Elements: $v + (-v) = 0$
+    \end{itemize}
+
+    Skalarmultiplikation
+    \begin{itemize}
+        \item Distributivgesetz 1: $c \cdot (v + w) = c \cdot v + c \cdot w$
+        \item Distributivgesetz 2: $(c + d) \cdot v = c \cdot v + d \cdot v$
     \end{itemize}
 \end{frame}
