Fixed structure of Vektorraeume.tex

--- a/Tutorium03/sections/Vektorraeume.tex
+++ b/Tutorium03/sections/Vektorraeume.tex
@@ -64,6 +64,7 @@
     \end{itemize}
 \end{frame}
 
+\subsection{Exkurs}
 \begin{frame}
     \frametitle{Exkurs: Mathematische Definition Vektorräume}
     \begin{itemize}
@@ -115,6 +116,7 @@
     \end{itemize}
 \end{frame}
 
+\subsection{Vektorräume}
 \begin{frame}
     \frametitle{Vektorräume}
     Ein Vektorraum ist eine Menge von Vektoren, die miteinander addiert oder mit Skalaren multipliziert werden können.
