--- a/Tutorium03/sections/Vektorraeume.tex
+++ b/Tutorium03/sections/Vektorraeume.tex
@@ -71,7 +71,7 @@
         \item Gruppe
         \begin{itemize}
             \item $(G,*)$, Menge $G$, Verknüpfung $*$
-            \item Assozsiativität
+            \item Assoziativität
             \item Existenz eines neutrales Elements
             \item Existenz eines inversen Elements
         \end{itemize}
@@ -134,7 +134,7 @@
     \begin{itemize}
         \item Kommutativgesetz: $v + w = w + v$
         \item Assoziativgesetz: $(v + w) + u = v + (w + u)$
-        \item Existenz des neutrales Elements: $v + 0 = v$
+        \item Existenz des neutralen Elements: $v + 0 = v$
         \item Existenz des inversen Elements: $v + (-v) = 0$
     \end{itemize}
 
