--- a/Tutorium04/Tutorium04.tex
+++ b/Tutorium04/Tutorium04.tex
@@ -19,6 +19,7 @@
     %-----------------------------------------------------------
     %   Sections
     %-----------------------------------------------------------
+    \input{Tutorium04/sections/LineareAbhaengigkeit}
     \input{Tutorium04/sections/MatrixBasics}
     \input{Tutorium04/sections/MatrixTranspo}
     \input{Tutorium04/sections/MatrixMulti}
