Added more subsections

--- a/Tutorium05/sections/LineareGleichungssysteme.tex
+++ b/Tutorium05/sections/LineareGleichungssysteme.tex
@@ -1,4 +1,5 @@
 \section{Lineare Gleichungssysteme}
+\subsection{Allgemein}
 \begin{frame}
     \frametitle{Allgemein}
     Ein lineares Gleichungssystem mit $n$ Unbekannten und $m$ Gleichungen ist gegeben durch
