Apply suggestions from code review
Co-authored-by: Felix Schladt <82309717+FelixSchladt@users.noreply.github.com>

--- a/Tutorium05/sections/LineareGleichungssysteme.tex
+++ b/Tutorium05/sections/LineareGleichungssysteme.tex
@@ -20,7 +20,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Uebung}
+    \frametitle{Übung}
     Welches Gleichungssystem ist linear?
     Falls ja, ist es auch homogen?
     \begin{enumerate}
@@ -49,7 +49,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Uebung - Loesung}
+    \frametitle{Übung - Lösung}
     Welches Gleichungssystem ist linear?
     Falls ja, ist es auch homogen?
     \begin{enumerate}
@@ -111,10 +111,10 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Loesung eines LGS}
+    \frametitle{Lösung eines LGS}
     \begin{itemize}
-        \item homogenes LGS hat genau eine(Nullvektor) oder unendlich viele Loesungen
-        \item inhomogenes LGS kann keine, genau eine oder unendlich viele Loesungen haben
+        \item homogenes LGS hat genau eine(Nullvektor) oder unendlich viele Lösungen
+        \item inhomogenes LGS kann keine, genau eine oder unendlich viele Lösungen haben
     \end{itemize}
 \end{frame}
 
@@ -143,7 +143,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Uebung}
+    \frametitle{Übung}
     Loesen Sie das folgende Gleichungssystem mit dem Gauss-Jordan-Verfahren
     \begin{equation*}
         \begin{cases}
@@ -155,7 +155,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Uebung - Loesung}
+    \frametitle{Übung - Lösung}
     Loesen Sie das folgende Gleichungssystem mit dem Gauss-Jordan-Verfahren
     \begin{align*}
         &\begin{cases}
@@ -212,7 +212,7 @@
 \subsection{Rang}
 \begin{frame}
     \frametitle{Rang}
-    Moeglichkeiten den Rang einer Matrix zu berechnen:
+    Möglichkeiten den Rang einer Matrix zu berechnen:
     \begin{itemize}
         \item In reduzierter Zeilenstufenform.
         Anzahl der nicht-null Zeilen ist Rang
@@ -223,11 +223,11 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Loesbarkeit eines LGS}
+    \frametitle{Lösbarkeit eines LGS}
     \begin{itemize}
-        \item unl\"osbar, wenn Rang der Koeffizientenmatrix kleiner als Rang der erweiterten Koeffizientenmatrix.
+        \item unlösbar, wenn Rang der Koeffizientenmatrix kleiner als Rang der erweiterten Koeffizientenmatrix.
         sprich: Nullreihe mit nicht-null Elementen ganz rechts
         \item genau eine Loesung, wenn Rang der Koeffizientenmatrix gleich Rang der erweiterten Koeffizientenmatrix.
-        \item unendlich viele Loesungen, wenn Rang der Koeffizientenmatrix groesser als Rang der erweiterten Koeffizientenmatrix.
+        \item unendlich viele Lösungen, wenn Rang der Koeffizientenmatrix größer als Rang der erweiterten Koeffizientenmatrix.
     \end{itemize}
 \end{frame}
