--- a/Tutorium05/sections/lineare-Abbildungen.tex
+++ b/Tutorium05/sections/lineare-Abbildungen.tex
@@ -160,7 +160,7 @@
 \begin{frame}
 	\frametitle{Übungen}
 	\begin{gather*}
-	vec{a} = \begin{pmatrix}
+	\vec{a} = \begin{pmatrix}
 	    3 \\
 	    1 \\
 	    2
