Updated names and details
Signed-off-by: aresage29 <jk.jan.koehler@gmx.de>

--- a/Tutorium01/sections/Organisatorisches.tex
+++ b/Tutorium01/sections/Organisatorisches.tex
@@ -2,9 +2,17 @@
 \begin{frame}
     \frametitle{Über uns}
     \begin{itemize}
-        \vfill \item Tutoren: Tobias Götz, Mario Schwartz, Felix Schladt
-        \vfill \item Mail: dhbw@tobiasgoetz.de oder alternativ über die DHBW Mailadressen
-		\vfill \item Schwerpunkt: Mobile Informatik (TIM) / IT Security (TIS)
+        \vfill \item Tutoren: Paul Burgard, Jan Köhler, Tim Mögerle
+        \vfill \item Kontakt: über die DHBW Mailadressen
+		\vfill \item IT Security (TIS)
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Hinweis}
+    \begin{itemize}
+        \vfill \item Folien wurden von TI21 übernommen und angepasst
+        \vfill \item Original von: Tobias Goetz, Mario Schwartz, Felix Schladt
     \end{itemize}
 \end{frame}
 
