--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,7 @@
 %! Author = tobig
+%! Editor = JK
 %! Date = 2022-12-22
+%! Editdate = 2024-01-16
 
 % Preamble
 \documentclass[11pt]{beamer}
@@ -19,8 +21,8 @@
 %   Presentation Information
 %-----------------------------------------------------------
 \title[Tutorium Lineare Algebra]{Tutorium Lineare Algebra}
-\subtitle{Vorlesung Mathematik 1 - Lineare Algebra - WS 2022/23}
-\author{Tobias Goetz, Mario Schwartz, Felix Schladt}
+\subtitle{Vorlesung Mathematik 1 - Lineare Algebra - WS 2023/24}
+\author{Paul Burgard, Jan Köhler, Tim Mögerle}
 \institute{DHBW Ravensburg}
 \logo{\includegraphics[width=1.5cm]{logo}}
 \date{\today}
