fixed errors in Tutorium01

--- a/Tutorium01/sections/Mengen.tex
+++ b/Tutorium01/sections/Mengen.tex
@@ -34,7 +34,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Uebung}
+    \frametitle{Übung}
     Es seien $A = \{1,2,3,4,5\}$ und $B = \{3,4,5,6,7\}$ zwei Mengen.
     Berechnen Sie die folgenden Mengen:
     \begin{enumerate}
@@ -46,7 +46,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Loesung}
+    \frametitle{Lösung}
     Es seien $A = \{1,2,3,4,5\}$ und $B = \{3,4,5,6,7\}$ zwei Mengen.
     Berechnen Sie die folgenden Mengen:
     \begin{enumerate}
@@ -63,8 +63,8 @@
         \vfill \item $\mathbb{N} = \{0,1,2,3,4, \dots\}$ ist die Menge aller natürlichen Zahlen
         \vfill \item $\mathbb{Z} = \{\dots, -2, -1, 0, 1, 2, \dots\}$ ist die Menge aller ganzen Zahlen
         \vfill \item $\mathbb{Q} = \{\frac{a}{b} \mid a \in \mathbb{Z}, b \in \mathbb{N} \wedge b \neq 0\}$ ist die Menge aller rationalen Zahlen
-        \vfill \item $\mathbb{I} = \mathbb{R} \cup \mathbb{Q}$ ist die Menge aller irrationalen Zahlen
-        \vfill \item $\mathbb{R} = \mathbb{Q} \cup \mathbb{I}$ ist die Menge aller reellen Zahlen
+        \vfill \item $\mathbb{I} = \mathbb{R} \setminus \mathbb{Q}$ ist die Menge aller irrationalen Zahlen
+        \vfill \item $\mathbb{R} = \mathbb{Q} \cup  \mathbb{I}$ ist die Menge aller reellen Zahlen
         \vfill \item $\mathbb{C} = \{a + bi \mid a, b \in \mathbb{R}\}$ ist die Menge aller komplexen Zahlen $i = \sqrt{-1}$
     \end{itemize}
 \end{frame}
