--- a/Tutorium02/sections/VollstaendigeInduktion.tex
+++ b/Tutorium02/sections/VollstaendigeInduktion.tex
@@ -54,7 +54,8 @@
         \vfill \item Aus Induktionsanfang folgt Induktionsvorraussetzung
         \vfill \item Induktionsschritt ($n \Rightarrow n+1$):
     \newline $\sum_{i=1}^{n+1} i^2 = \frac{(n+1)(n+2)(2n+3)}{6}$
-            \vfill \item $\sum_{i=1}^{n} i^2 + (n+1)^2 = \frac{(n+1)(n+2)(2n+3)}{6}$
+            \vfill \item Folglich gilt zu zeigen:
+	\newline$\sum_{i=1}^{n} i^2 + (n+1)^2 = \frac{(n+1)(n+2)(2n+3)}{6}$
     \end{itemize}
 
 \end{frame}
