--- a/Tutorium01/sections/SummenProdukte.tex
+++ b/Tutorium01/sections/SummenProdukte.tex
@@ -25,6 +25,7 @@
         \vfill \item $x = 2+4+6+8+10 = \sum_{i=1}^{5} 2i$
         \vfill \item $x = 1+3+5+7+9 = \sum_{i=1}^{5} 2i-1$
         \vfill \item $x = 1 \cdot 3 \cdot 5 \cdot 7 \cdot 9 = \prod_{i=1}^{5} 2i-1$
-        \vfill \item $x = 3+6+9+12+15+18+21+24+27+30 = \sum_{i=1}^{10} 3i$
+        \vfill \item $x = 3+6+9+12+15+18+21+24+27+30
+	\newline = \sum_{i=1}^{10} 3i$
     \end{enumerate}
 \end{frame}
