--- a/Tutorium01/sections/Wiederholung.tex
+++ b/Tutorium01/sections/Wiederholung.tex
@@ -28,16 +28,36 @@
 	\vfill \item $\frac{a}{b} * (1 + \frac{c}{1-c})$
         \vfill \item $\frac{a}{\ln(1)}$
         \vfill \item $\frac{6p + 11}{2p + 4} - \frac{2p + 5}{p^2 +2p} -3$
+	   \vfill \item $\frac{1}{x - y} - \frac{1}{x + y} $
     \end{enumerate}
 \end{frame}
 
 \begin{frame}
     \frametitle{Bruchgesetze Formeln Übungen Lösungen}
+	Lösungen für Aufgabe 1 und 2:
     \begin{enumerate}
 	\vfill \item $\frac{a}{b} * (1 + \frac{c}{1-c}) = \frac{a}{b}*(\frac{1-c}{1-c}+\frac{c}{1-c}) = \frac{a}{b}*(\frac{1}{1-c})$
         \vfill \item $\frac{a}{\ln(1)}$ Nicht erlaubt, da durch 0 geteilt wird
-	\vfill \item $\frac{6p + 11}{2p + 4} - \frac{2p + 5}{p^2 +2p} -3 = \frac{6p^2+11p-4p-10-6p^2-12p}{2p(p+2)} = -\frac{5}{2p}$
     \end{enumerate}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Bruchgesetze Formeln Übungen Lösungen}
+	Lösungen für Aufgabe 3:
+	\begin{itemize}
+	\vfill \item $\frac{6p + 11}{2p + 4} - \frac{2p + 5}{p^2 +2p} -3 = \frac{6p^2 + 11p}{2p^2 + 4p} - \frac{4p + 5p}{2p^2 + 4p} - \frac{6p^2 + 12p}{2p^2 + 4p}$
+	\vfill \item $\frac{6p^2 + 11p}{2p^2 + 4p} - \frac{4p + 10}{2p^2 + 4p} - \frac{6p^2 + 12p}{2p^2 + 4p} = \frac{-5p - 10}{2p^2 + 4p}$
+	\vfill \item$ \frac{-5p - 10}{2p^2 + 4p} = \frac{-0.5 * (2 * (5p + 10))}{0.2p * (5 * (2p + 4))}$
+	\vfill \item$\frac{-0.5 * (2 * (5p + 10))}{0.2p * (5 * (2p + 4))} = \frac{-0.5}{0.2p} = -\frac{5}{2p}$
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Bruchgesetze Formeln Übungen Lösungen}
+	Lösungen für Aufgabe 4:
+	\begin{itemize}
+	\vfill \item$\frac{1}{x - y} - \frac{1}{x + y} = \frac{2y}{x^2-y^2}$
+	\end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -55,15 +75,18 @@
         \vfill \item $(2+r)^2 - (2-r)^2$
         \vfill \item $\frac{1}{2}a^2 - 4ab + 4b^2$
         \vfill \item $(0.5-y)^2 - (0.5x - y)*(0.5 + y)$
+	\vfill \item $(0.5-y)^2 - (0.5x - y)*(0.5x + y)$
     \end{enumerate}
 \end{frame}
 
 \begin{frame}
     \frametitle{Binomische Formeln Übungen Lösungen}
     \begin{enumerate}
-        \vfill \item $(2+r)^2 - (2-r)^2 = 8r$
+        \vfill \item $(2+r)^2 - (2-r)^2 = (4 + 4r +r^2) - (4 - 4r + r^2) = 8r$
         \vfill \item $\frac{1}{2}a^2 - 4ab + 4b^2$ hier kann keine binomische Formel angewendet werden
-        \vfill \item $(0.5-y)^2 - (0.5x - y)*(0.5 + y) = 0.25x^2 -xy +y^2-0.25x^2+y^2 -xy+2y^2$
+        \vfill \item $(0.5-y)^2 - (0.5x - y)*(0.5 + y) = 2y^2 -0.5y-0.25x-0.5xy+0.25$
+	\vfill \item $(0.5-y)^2 - (0.5x - y)*(0.5x + y) =
+	\newline -y - 0,25x^2 + 0,25$
     \end{enumerate}
 \end{frame}
 
@@ -86,6 +109,7 @@
 	\begin{enumerate}
 		\vfill \item $\frac{1^3}{5^n}$
 		\vfill \item $\frac{5^0- \sin(a^2) + \cos(a^2)}{\ln(e)}$
+		\vfill \item $\frac{5^0-( \sin(a)^2 + \cos(a)^2)}{\ln(e)}$
 		\vfill \item $x^{-n} * x$
 		\vfill \item $\frac{x^5 +1}{x^{m+2}} - \frac{2x^2-2}{x^m} + \frac{2-x}{x^{m-2}}$
 	\end{enumerate}
@@ -94,9 +118,10 @@
 \begin{frame}
     \frametitle{Potenzgesetze Lösungen}
 	\begin{enumerate}
-		\vfill \item $\frac{1^3}{5^n} = (\frac{1}{5})^n$
-		\vfill \item $\frac{5^0- \sin(a^2) + \cos(a^2)}{\ln(e)} = \frac{1-1}{1} = 0$
+		\vfill \item $\frac{1^3}{5^n} =  (\frac{1}{5^n}) = (\frac{1}{5})^n$
+		\vfill \item $\frac{5^0- \sin(a^2) + \cos(a^2)}{\ln(e)} = \frac{1 - \sin(a^2) + \cos(a^2)}{1} = 1 - \sin(a^2) + \cos(a^2)$
+		\vfill \item $\frac{5^0-( \sin(a)^2 + \cos(a)^2)}{\ln(e)} = \frac{1-1}{1} = 0$
 		\vfill \item $x^{-n} * x = x^{-n+1}$
-		\vfill \item $\frac{x^5 +1}{x^{m+2}} - \frac{2x^2-2}{x^m} + \frac{2-x}{x^{m-2}} = \frac{x^5+1-2x^4-2x^2+2x^4-x^5}{x^{m+2}} = \frac{1+2x^2}{x^{m+2}}$
+		\vfill \item $\frac{x^5 +1}{x^{m+2}} - \frac{2x^2-2}{x^m} + \frac{2-x}{x^{m-2}} = \frac{x^5+1}{x^{m+2}} - \frac{2x^2*x^2-2*x^2}{x^{m+2}} + \frac{2*x^4-x*x^4}{x^{m+2}}= \frac{x^5+1-2x^4+2x^2+2x^4-x^5}{x^{m+2}} = \frac{1+2x^2}{x^{m+2}}$
 	\end{enumerate}
 \end{frame}
